Changes to be committed: 	new file:   app/Http/Controllers/CatalogsController.php 	modified:   app/Http/Controllers/api/AuthController.php 	new file:   app/Http/Controllers/api/PropertyController.php 	modified:   app/Models/LeaseAgreements.php 	modified:   app/Models/Property.php 	modified:   app/Models/RentTypeCatalog.php 	new file:   app/Services/PropertyService.php 	new file:   app/Services/UserService.php 	modified:   database/migrations/2023_02_21_212656_create_rent_type_catalog_table.php 	modified:   public/api.yml 	modified:   routes/api.php
